[project]
name = "hello-lang-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.2",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
